testdata/baselines/reference/submodule/conformance/nullishCoalescingOperatorInParameterBindingPattern(target=es2015).errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
nullishCoalescingOperatorInParameterBindingPattern.ts(3,6): error TS2537: Type '{}' has no matching index signature for type 'string'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== nullishCoalescingOperatorInParameterBindingPattern.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/36295
    const a = (): string | undefined => undefined;
    (({ [a() ?? "d"]: c = "" }) => {})();
         ~~~~~~~~~~
!!! error TS2537: Type '{}' has no matching index signature for type 'string'.